# finite-automata-partition-refinement

./: CMakeLists.txt  Makefile  README.md  check_output.cpp  exe.cpp  main.cpp  merge.cpp  partition_refinement.py
CMakeModules/: ConfigureCompilerClang.cmake  ConfigureCompilerGcc.cmake
data/: DFA.inter  debrujin.dot  rand100.dot  randWG.dot  randWG.inter  wheeler_dfa.inter  wheeler_nfa.inter
internal/: Automaton.hpp  DFA.hpp  NFA.hpp  definitions.hpp  finite_automaton.hpp  partition.hpp  utils.hpp
lib/: part_ref.cpp  part_ref.h
main/: join.cpp  merge.cpp  prune.cpp  sort.cpp
python_code/: partition_refinement.py
